feat(administration): add permission and organization workspace
